--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pagina HTML</title>
+        <meta charset="utf-8">
+        <title>Pagina HTML - 17-03-2025</title>
 </head>
 <body>
-    
+    <h1>
+        Título 1
+    </h1>
+    <h2>
+        Título 2
+    </h2>
+    <p>
+        Aprendendo HTML
+    </p>
     </body>
 </html>
+
