--- a/Aula 2/aula2.html
+++ b/Aula 2/aula2.html
@@ -18,7 +18,7 @@
     <p>
         Nome
         Sobrenome
-        Idade                   Email
+        Idade                   Email CPF
     </p>
     <h4>
         Titulo 4
