Ajuste na cor verde

--- a/Aula 2/atividade.html
+++ b/Aula 2/atividade.html
@@ -22,7 +22,7 @@
 
 
     <hr>
-<h2 style="color: rgba(23, 83, 7, 0.76);">Exemplo de um código escrito na liguagem C</h2>
+<h2 style="color: green;">Exemplo de um código escrito na liguagem C</h2>
 <b>
 <pre>
     #include
