Ajuste no vermelho do título

--- a/Aula 2/atividade.html
+++ b/Aula 2/atividade.html
@@ -13,7 +13,7 @@
     <p>Na química, por exemplo, a água é representada por H<sub>2</sub>O, enquanto em matemática, um expoente pode ser expresso como x<sup>2</sup>.</p>
 
         <hr>
-<h2 style="color: rgba(180, 3, 3, 0.76);"> <b>O poder das citações</b></h2>
+<h2 style="color: red;"> <b>O poder das citações</b></h2>
 <blockquote cite="https://www.pensador.com/frase/MTEzMTU/">
 “O Sucesso é ir de fracasso em fracasso sem perder o entusiasmo.” - Winston Churchill
 </blockquote>
