--- a/Aula 3/aula3.html
+++ b/Aula 3/aula3.html
@@ -56,33 +56,38 @@
 <h1>Lista de descrição</h1>
 <dl>
     <dt>Python</dt>
-    <dd>Linguagem de Progamação Back-End</dd>
+    <dd>Linguagem de Programação Back-End</dd>
     <dt>Linguagem R</dt>
     <dd>Linguagem para manipulação de dados</dd>
 </dl>
 
-<h1>Tabelas</h1>
+<h1>Tabela 1</h1>
+
 <table border="1">
     <tr>
         <th>Empresa</th>
         <th>Telefone</th>
         <th>Site</th>
     </tr>
+    <tr>
         <td>UCB</td>
         <td>3333-3332</td>
         <td>https://ucb.catolica.br</td>
     </tr>
     <tr>
-        <td>UCB</td>
+        <td>Colégio Catolica</td>
         <td>3333-3332</td>
         <td>https://ucb.catolica.br</td>
     </tr>
 
+</table>
+
 <h1>Tabela 2</h1>
-<table border="1"></table>
+<table border="1">
     <tr>
         <th>Cabeçalho</th>
     </tr>
+    <tr>
         <td>Linha 1</td>
     </tr>
     <tr>
@@ -91,8 +96,9 @@
     <tr>
         <td>Linha 3</td>
     </tr>
-
 </table>
+
+
 
 </body>
 </html>
