ATIVIDADE TABELAS E LINKS

--- a/Atividade tabelas.html
+++ b/Atividade tabelas.html
@@ -79,7 +79,7 @@
 
     <br><br>
 
-    <!-- TABELA 3 - Bancos de Dados -->
+    <!-- TABELA 3 - Bancos Zde Dados -->
     <table border="2">
         <caption style="background-color: #0603b8; color: white; font-weight: bold;">Bancos de Dados Populares</caption>
         <tr>
