--- a/Aula 4 07_04_2025/Atividade.html/Atividade Tabela e Links.html
+++ b/Aula 4 07_04_2025/Atividade.html/Atividade Tabela e Links.html
@@ -1,1 +1,67 @@
-tarefa grande da porrraaaaaaaaaaaaaaa
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Curso de HTML</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .vermelho {
+            color: red;
+            font-weight: bold;
+        }
+        .botoes a {
+            margin-right: 10px;
+            padding: 5px 10px;
+            border: 1px solid black;
+            text-decoration: none;
+            background-color: #f2f2f2;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        td ul {
+            margin: 0;
+            padding-left: 20px;
+        }
+    </style>
+</head>
+<body>
+
+   
+    
+
+    <p class="vermelho">Página: Principal</p>
+    <h3>Curso de HTML – Curso Completo de HTML 5</h3>
+
+    <div class="botoes">
+        <a href="sobre.html">Sobre o autor</a>
+        <a href="contato.html">Contato</a>
+    </div>
+
+    <table>
+        <tr>
+            <td>
+                <strong>Seja bem-vindo ao curso de HTML!</strong><br><br>
+                Estamos muito felizes em tê-lo(a) conosco nessa jornada de aprendizado. Neste curso, você irá explorar os fundamentos da criação de páginas web, aprenderá a estruturar conteúdo de forma eficiente e dará os primeiros passos para se tornar um desenvolvedor web. Ao longo do caminho, você vai entender como o HTML é a base de todas as páginas que você vê na internet.<br><br>
+                Prepare-se para praticar, experimentar e desenvolver habilidades essenciais para sua carreira ou projetos pessoais. Estamos aqui para ajudar em cada passo, então não hesite em tirar dúvidas e se envolver com o conteúdo!
+            </td>
+            <td>
+                <strong>Tecnologias a serem trabalhadas</strong>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+
+</body>
+</html>
