--- a/Aula_9_02_06_2025/index.html
+++ b/Aula_9_02_06_2025/index.html
@@ -1,145 +1,245 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap - Exemplo Site</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Index - Página Inicial</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0d0d0d;
+      color: #ffffff;
+      overflow-x: hidden;
+    }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 20% 30%, #1a1a1a 0%, transparent 40%), 
+                  radial-gradient(circle at 80% 70%, #1f1f1f 0%, transparent 40%);
+      z-index: -1;
+      animation: backgroundMove 15s infinite alternate ease-in-out;
+    }
+    @keyframes backgroundMove {
+      0% { background-position: 20% 30%, 80% 70%; }
+      100% { background-position: 30% 20%, 70% 80%; }
+    }
+    .navbar-dark .navbar-nav .nav-link {
+      color: #ffffff;
+    }
+    .navbar-dark .navbar-nav .nav-link:hover {
+      color: #00e0ff;
+    }
+    header {
+      min-height: 80vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      color: #ffffff;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+    .carousel-item img {
+      max-height: 500px;
+      object-fit: cover;
+    }
+    section {
+      padding: 80px 20px;
+      text-align: center;
+    }
+    .team-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 30px;
+    }
+    .team-member {
+      background: #1b1b1b;
+      border-radius: 12px;
+      padding: 20px;
+      width: 220px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    }
+    .team-member img {
+      width: 100%;
+      border-radius: 50%;
+      margin-bottom: 15px;
+      border: 3px solid #2e2e2e;
+    }
+    .team-member h4 {
+      color: #ffffff;
+      margin-bottom: 5px;
+    }
+    .team-member span {
+      color: #aaa;
+      font-size: 0.9rem;
+    }
+    .card {
+      background-color: #1b1b1b;
+      color: #fff;
+      border: none;
+    }
+    .card a.btn-primary {
+      background-color: #0072ff;
+      border: none;
+    }
+    footer {
+      background: #000;
+      text-align: center;
+      padding: 20px;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
-    <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
-      <!-- AREA DE DESTAQUE DO SITE-->
-      <header class="bg-primary text-white text-center py-5">
-            <div class="container">
-                <h1 class="display-4">Site</h1>
-                <p class="lead"></p>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Tech Index</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#tecnologias">Tecnologias</a></li>
+          <li class="nav-item"><a class="nav-link" href="#equipe">Equipe</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projetos">Projetos</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-                <a href="#" class="btn btn-light btn-lg mt-3">Button</a>
+  <!-- HEADER -->
+  <header>
+    <h1>Bem-vindo ao Tech Index</h1>
+    <p>Explore nossas tecnologias, equipe, projetos e formas de contato</p>
+  </header>
+
+  <!-- CAROUSEL -->
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://via.placeholder.com/1200x400?text=Slide+1" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://via.placeholder.com/1200x400?text=Slide+2" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://via.placeholder.com/1200x400?text=Slide+3" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <!-- SEÇÃO: TECNOLOGIAS -->
+  <section id="tecnologias">
+    <h2>Tecnologias</h2>
+    <p>Trabalhamos com ferramentas modernas como React, Node.js, HTML5, CSS3, entre outras para desenvolver soluções rápidas, bonitas e escaláveis.</p>
+  </section>
+
+  <!-- SEÇÃO: EQUIPE -->
+  <section id="equipe">
+    <h2>Equipe</h2>
+    <div class="team-container">
+      <div class="team-member">
+        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="João Silva">
+        <h4>João Silva</h4>
+        <span>Desenvolvedor Front-end</span>
+      </div>
+      <div class="team-member">
+        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Ana Souza">
+        <h4>Ana Souza</h4>
+        <span>UX/UI Designer</span>
+      </div>
+      <div class="team-member">
+        <img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Carlos Lima">
+        <h4>Carlos Lima</h4>
+        <span>Back-end Developer</span>
+      </div>
+      <div class="team-member">
+        <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Marina Costa">
+        <h4>Marina Costa</h4>
+        <span>Analista de Dados</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- SEÇÃO: PROJETOS -->
+  <section id="projetos">
+    <h2>Projetos</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Projeto A</h5>
+              <p class="card-text">Sistema web integrado para startups.</p>
+              <a href="#" class="btn btn-primary">Ver mais</a>
             </div>
-      </header>
-
-      <!--CARDS-->
-      <div class="container py-10">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Projeto B</h5>
+              <p class="card-text">Dashboard de visualização de dados.</p>
+              <a href="#" class="btn btn-primary">Ver mais</a>
             </div>
-      </div>
-
-
-
-      <!--CAROUSEL-->
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
-      <!--MODAL-->
-      <!-- Button trigger modal -->
-      <div class="text-center mt-5">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Launch demo modal
-            </button>
-      </div>
-
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Projeto C</h5>
+              <p class="card-text">Aplicativo de produtividade pessoal.</p>
+              <a href="#" class="btn btn-primary">Ver mais</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <!--RODAPE-->
+  <!-- SEÇÃO: CONTATO -->
+  <section id="contato">
+    <h2>Contato</h2>
+    <p>Entre em contato com nossa equipe para saber mais, tirar dúvidas ou iniciar uma parceria. Estamos à disposição!</p>
+  </section>
+
   <footer>
-        <div class="text-center">
-            &copy; 2025 Bootstrap
-        </div>
-    </footer>
+    &copy; 2025 Tech Index. Todos os direitos reservados.
+  </footer>
 
-
-    <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
