Retirada de anotações

--- a/Trabalho_final_html/Front end Trabalho/html/index.html
+++ b/Trabalho_final_html/Front end Trabalho/html/index.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tech Index - Página Inicial</title>
 
-  <!-- Bootstrap CSS -->
+
   <link rel="stylesheet" href="css/bootstrap.min.css" />
 
-  <!-- Estilo personalizado -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body style="padding-top: 70px;"> <!-- apenas padding-top necessário -->
+<body style="padding-top: 70px;"> 
 
-  <!-- NAVBAR TOPO -->
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Tech Index</a>
@@ -33,7 +32,7 @@
     </div>
   </nav>
 
-  <!-- HEADER -->
+
   <header class="text-center d-flex flex-column justify-content-center align-items-center"
           style="min-height: 100vh;">
     <h1 class="display-4">Bem-vindo ao Tech Index</h1>
@@ -47,7 +46,7 @@
     </div>
   </header>
 
-  <!-- RODAPÉ TRADICIONAL -->
+
   <footer class="bg-dark text-light py-4">
     <div class="container text-center">
       <p class="mb-1">&copy; 2025 Tech Index. Todos os direitos reservados.</p>
@@ -55,9 +54,9 @@
     </div>
   </footer>
 
-  <!-- Bootstrap Bundle JS (Popper + Bootstrap) -->
+
   <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- Script personalizado -->
+
   <script src="js/script.js"></script>
 </body>
 </html>
