--- a/Trabalho_final_html/Front end Trabalho/html/Contato.html
+++ b/Trabalho_final_html/Front end Trabalho/html/Contato.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contato - Tech Index</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -74,6 +76,12 @@
 
         <button type="submit" class="btn btn-primary w-100">Enviar</button>
       </form>
+
+      <a href="https://wa.me/556133569000" target="_blank">
+        <button style="background-color: #25D366; color: white; padding: 10px 20px; border: none; border-radius: 5px; margin-top: 20px; margin-left: 425px;">
+        <i class="fab fa-whatsapp"></i> Fale conosco
+        </button>
+      </a>
     </main>
 
 
