--- a/Trabalho_final_html/Front end Trabalho/html/Projeto.html
+++ b/Trabalho_final_html/Front end Trabalho/html/Projeto.html
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Início</a>
+                <a class="nav-link" href="index.html">Início</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="tecnologia.html">Tecnologias</a>
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="equipe.html">Equipe</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projeto.html">Projetos</a>
+                <a class="nav-link active" href="projeto.html">Projetos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contato.html">Contato</a>
